<resources>
    <string name="app_name">Stalker</string>
    <string name="btn_new">NEW</string>
    <string name="btn_list">LIST</string>
    <string name="btn_save">SAVE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="job">Job</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="years_old">years old</string>
    <string name="take_a_pic">TAKE A PIC</string>
</resources>
