<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowPersonActivity">

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtFNR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLNR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtJR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtBD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtBDR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtPHR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txtDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtDER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvGalleryShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>